--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       <i class="fa fa-user"></i>
       <a href="http://www.petterhj.net">Petter Holt Juliussen</a>
       <i class="fa fa-github"></i>
-      <a href="#">GitHub</a>
+      <a href="https://github.com/petterhj/mingeo">GitHub</a>
      </footer>
 
     </div>
